--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "4.0.0-alpha.58",
-    "@mui/material": "5.0.2",
+    "@mui/material": "^5.0.2",
+    "@emotion/react": "11.4.1",
+    "@emotion/styled": "11.3.0",
     "constate": "^3.2.0",
     "crypto-js": "^4.0.0",
     "dayjs": "^1.10.4",
