--- a/package.json
+++ b/package.json
@@ -90,5 +90,8 @@
     "precompress": "^6.3.2",
     "prettier": "^2.3.0",
     "standard-version": "^9.3.0"
-  }
+  },
+  "rules": {
+   "no-unused-vars": "off"
+ }
 }
